fixed login/signup form spacing, as well as date added

--- a/front-end/src/css/Login.css
+++ b/front-end/src/css/Login.css
@@ -75,7 +75,7 @@
     flex-direction: column;
     top: 18vh;
     justify-content: flex-start;
-    padding: 10px 10px 20px 10px;
+    padding: 10px 10px 10px 10px;
     align-items: center;
     box-shadow: 0 3px 5px 2px rgba(107, 107, 107, 0.342);
     text-align: center;
@@ -152,7 +152,7 @@
 
 #form > input[type=text], #form > input[type=password] {
     font-size: 17px;
-    height: 36%;
+    height: 55px;
     margin: 8px 0;
     border-radius: 5px;
     padding-left: 10px;
@@ -174,7 +174,7 @@
     font-size: 20px;
     border-radius: 5px;
     border: none;
-    height: 120px;
+    height: 55px;
     width: 95%;
     font-weight: bold;
     transition: background-color 0.3s;
@@ -186,15 +186,17 @@
 }
 
 #sign-up-button {
+    position: absolute;
+    bottom: 10px;
     background-color: #979797;
     color: white;
     font-size: 18px;
     border-radius: 5px;
     border: none;
-    height: 100px;
+    height: 50px;
     width: 69%;
     font-weight: bold;
-    margin-top: 10px;
+    margin: 10px;
     transition: background-color 0.5s;
 }
 #sign-up-button:hover {
@@ -203,29 +205,32 @@
 }
 
 #divider {
+    position: absolute;
+    bottom: 95px;
     width: 95%;
     height: 0.1%;
     background-color: rgb(163, 163, 163);
     border: none;
-    margin-bottom: 18px;
-    margin-top: 15px;
 }
 
 #no-account {
+    position: absolute;
+    bottom: 60px;
     color: rgb(94, 94, 94);
-    margin-bottom: 0px;
     font-size: 15px;
     text-rendering: optimizelegibility;
 }
 
 #back-to-login {
+    position: absolute;
+    bottom: 10px;
     background: none;
     border: none;
     padding: 0;
     color: #239400;
     text-decoration: underline;
     cursor: pointer;
-    margin: 10px 0 7px 0;
+    margin: 10px;
 }
 
 #back-to-login:hover {
